Fix for a few pixels of horizontal scrolling on various pages

--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -427,7 +427,6 @@ a {
 
 .body {
   background-color: #11151d;
-  margin-right: 3px;
 }
 
 .navbar-master {
@@ -1013,7 +1012,7 @@ a {
   justify-content: center;
   align-items: center;
   height: 750px;
-  margin: 75px -5px 0;
+  margin: 75px 0 0;
   padding-top: 5px;
   display: flex;
   position: absolute;
@@ -1026,8 +1025,6 @@ a {
 .flex-block-8 {
   background-image: linear-gradient(233deg, rgba(186, 100, 242, .92), rgba(248, 247, 112, .56));
   height: 750px;
-  margin-left: -5px;
-  margin-right: -5px;
 }
 
 .div-block-10 {
@@ -1182,8 +1179,6 @@ a {
   background-size: auto, cover, auto;
   border-bottom: 1px solid #e4ebf3;
   margin-bottom: 0;
-  margin-left: -5px;
-  margin-right: -5px;
   padding: 80px 30px;
   position: relative;
 }
@@ -1359,8 +1354,6 @@ a {
   background-color: #2b2f35;
   border-bottom: 1px solid #e4ebf3;
   margin-top: -1px;
-  margin-left: -5px;
-  margin-right: -5px;
   padding: 50px 30px 15px;
   position: relative;
 }
@@ -1369,7 +1362,6 @@ a {
   z-index: 1;
   background-color: #11151d;
   border-bottom: 1px solid #e4ebf3;
-  margin: -1px -5px;
   padding: 80px 30px;
   position: relative;
 }
